# cute-calculator

./: CMakeLists.txt
calc_app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
calc_lib/: CMakeLists.txt  engine.cpp  engine.h
calc_tests/: CMakeLists.txt  engine_tests.cpp  engine_tests.h  main.cpp
